--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.02 Sun Jan 19 2014 Pavel Shaydo <zwon@cpan.org>
+    - Add links to repo and bugtraker
+
 0.01 Sat Jan 11 2014 Pavel Shaydo <zwon@cpan.org>
-    * First version, released on an unsuspecting world.
+    - First version, released on an unsuspecting world.
 
