--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.03 Sun Jan 19 2014 Pavel Shaydo <zwon@cpan.org>
+    - fix dependencies
+
 0.02 Sun Jan 19 2014 Pavel Shaydo <zwon@cpan.org>
     - Add links to repo and bugtraker
 
