--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.05 Mon Jan 20 2014 Pavel Shaydo <zwon@cpan.org>
+    - do not require 5.10
+
 0.04 Sun Jan 19 2014 Pavel Shaydo <zwon@cpan.org>
     - use Newx/Safefree instead of calloc/free
 
