--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.06 Tue Apr  8 2014 Pavel Shaydo <zwon@cpan.org>
+    - change behaviour of find_closest_numbers_around
+
 0.05 Mon Jan 20 2014 Pavel Shaydo <zwon@cpan.org>
     - do not require 5.10
 
