--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.07_01 Sat Apr 12 2014 Pavel Shaydo <zwon@cpan.org>
+    - fix handling of 64 bit integers and long doubles. See #1
+
 0.06 Tue Apr  8 2014 Pavel Shaydo <zwon@cpan.org>
     - change behaviour of find_closest_numbers_around
 
