--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.07_01 Sat Apr 12 2014 Pavel Shaydo <zwon@cpan.org>
+0.08 Thu Apr 17 2014 Pavel Shaydo <zwon@cpan.org>
     - fix handling of 64 bit integers and long doubles. See #1
 
 0.06 Tue Apr  8 2014 Pavel Shaydo <zwon@cpan.org>
