--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.09 Fri Sep 11 2015 Pavel Shaydo <zwon@cpan.org>
+    - document and test sort stability. See #2
+
 0.08 Thu Apr 17 2014 Pavel Shaydo <zwon@cpan.org>
     - fix handling of 64 bit integers and long doubles. See #1
 
